--- a/packages/components/src/components/listbox/co-listbox.styles.css
+++ b/packages/components/src/components/listbox/co-listbox.styles.css
@@ -126,4 +126,5 @@ slot[name='input']::slotted([role='listbox']) {
   color: var(--co-color-feedback-danger-text);
   font-size: var(--co-typography-caption-size);
   line-height: var(--co-typography-caption-line-height);
+  min-block-size: var(--co-font-line-height-normal, 1.25em);
 }
